# Weather-File-Builder

./: .gitignore  CHANGELOG_CLI_IMPROVEMENTS.md  CONFIG_LOGGING_GUIDE.md  IMPLEMENTATION_SUMMARY_CONFIG_LOGGING.md  LATLON_INTEGRATION.md  LICENSE  README.md  manual_debug-improvements.ipynb  pyproject.toml  setup.sh  test_config_logging.py  test_file_management.py  test_latlon_integration.py
examples/: basic_usage.py
notebook/: fixing_errors.ipynb
src/weather_file_builder/: __init__.py  cli.py  converters.py  core.py  epw.py  epw_data_dictionary.txt  interactive.py  interactive_old.py  tmy.py  utils.py  variables.py  visualization.py
tests/: test_basic.py  test_timeseries.py
