[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-file-builder"
version = "0.1.0"
description = "Build weather files (EPW, TMY) from ERA5 reanalysis data for building energy simulation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Justin McCarty", email = "mccarty.justin.f@gmail.com"}
]
keywords = ["weather", "ERA5", "EPW", "TMY", "building simulation", "EnergyPlus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "cdsapi>=0.6.1",
    "xarray>=2023.1.0",
    "netcdf4>=1.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
weather-file-builder = "weather_file_builder.cli:main"

[project.urls]
Homepage = "https://github.com/jmccarty/weather_file_builder"
Documentation = "https://github.com/jmccarty/weather_file_builder#readme"
Repository = "https://github.com/jmccarty/weather_file_builder"
Issues = "https://github.com/jmccarty/weather_file_builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
